fix(md-item): exclude start slot from hidden overflow

--- a/labs/item/internal/_item.scss
+++ b/labs/item/internal/_item.scss
@@ -85,7 +85,7 @@
   }
 
   .default-slot,
-  :not([name='start'])::slotted(*) {
+  .text ::slotted(*) {
     overflow: hidden;
     text-overflow: ellipsis;
   }
